[tool.poetry]
name = "tutorial-polars"
version = "0.1.0"
description = ""
authors = ["Roberto Guedes <robertoguedes@edu.univali.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
