[tool.poetry]
name = "tutorial-polars"
version = "0.1.0"
description = ""
authors = ["Roberto Guedes <robertoguedes@edu.univali.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.6.0"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
requests = "^2.32.3"
downloads = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
